# gcolor2

./: .gitignore  Makefile.am  README.creole  autogen.sh  configure.ac  zrelease
po/: POTFILES.in
src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c
